# next-fastapi-note-app

./: .firebaserc  .gitignore  README.md  docker-compose.yml  openapi-generator.config.json  package.json  playwright.config.ts  pnpm-lock.yaml  redocly.yml
.serena/: project.yml
.serena/memories/: codebase_structure.md  coding_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_guidelines.md
.tools/: uvx
backend/: .env.example  Dockerfile  Dockerfile.lambda  README.md  pyproject.toml  ruff.toml
backend/src/app/: main.py
backend/src/app/api/: router.py
backend/src/app/api/routes/: auth.py  comments.py  me.py  me_notes.py  notes.py
backend/src/app/application/services/: comment_service.py  notes_service.py  user_service.py  websocket_service.py
backend/src/app/domain/entities/: comment.py  note.py  user_profile.py
backend/src/app/domain/ports/: comment_repository.py  notes_repository.py  user_repository.py
backend/src/app/infra/repositories/: dynamodb_notes_repository.py  dynamodb_user_repository.py  in_memory_comment_repository.py  in_memory_notes_repository.py  in_memory_user_repository.py
backend/src/app/shared/: auth.py  config.py  dependencies.py  logger.py  validators.py
docs/api/: README.md  openapi.yml  websocket-integration.md
docs/api/paths/: authentication.yml  comments.yml  personal-notebook.yml  public-notes.yml  user-profile.yml  websocket.yml
docs/architecture/: overview.md
docs/auth-security/: authentication.md  firebase-setup.md
docs/deployment/: backend-deployment-guideline.md  frontend-deployment-guideline.md
docs/development/: backend-development-workflow.md  frontend-development-workflow.md  getting-started.md  serena-mcp-setup.md
docs/testing/: backend-testing.md
docs/ui/: Internationalization.md  design-system.md  navigation.md
docs/ui/components/: comment-components.md  profile-components.md  visibility-badge.md
docs/ui/pages/: account-profile.md  home.md  login-signup-modals.md  my-notebook.md  private-note-detail.md  public-note-detail.md
frontend/: .env.example  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  not-found.tsx
frontend/src/hooks/: useNoteNavigation.ts  useNoteVisibility.ts  useProfileForm.ts
frontend/src/mocks/: browser.ts  server.ts
frontend/src/utils/: profile.ts
frontend/tests/: setup.ts  test-utils.tsx
infrastructure/aws-sam/: README.md  build-websocket-handlers.sh  samconfig.toml  template.yml
infrastructure/serverless/: serverless.yml
scripts/: serena.sh
(+92 files in other folders)
